--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.escooterapp" "\0"
             VALUE "FileDescription", "yoyo_instant_app" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "yoyo_instant_app" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2022 com.escooterapp. All rights reserved." "\0"
             VALUE "OriginalFilename", "yoyo_instant_app.exe" "\0"
             VALUE "ProductName", "yoyo_instant_app" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
